--- a/src/components/Family/Family.css
+++ b/src/components/Family/Family.css
@@ -1,3 +1,8 @@
 .family {
-  border: 1px solid red;
+  border: 1px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
 }
