--- a/src/components/Family/Family.css
+++ b/src/components/Family/Family.css
@@ -1,9 +1,20 @@
 .family {
-  border: 1px solid black;
+  border: 2px solid black;
+  border-radius: 5px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 5px;
   z-index: 100;
+  margin: 25px 10px;
+}
+
+.family_toggled{
+  border: 4px solid black;
+}
+
+.family span{
+  font-family: cursive;
+  font-style: italic;
 }
