--- a/src/components/Generation/Generation.css
+++ b/src/components/Generation/Generation.css
@@ -4,6 +4,8 @@
   flex:1;
   justify-content: center;
   align-items: stretch;
+  border-radius: 5px;
+  margin: 5px;
 }
 
 .realm{
@@ -13,8 +15,15 @@
 }
 
 .generation_number{
-  border: 1px solid black;
+  border: 2px solid black;
   z-index: 100;
+  border-radius: 5px;
+  margin: 5px;
+  height: 200px;
+}
+
+.generation_number_border{
+  border: 4px solid black;
 }
 
 .generation_number span{
@@ -24,6 +33,9 @@
 justify-content: center;
 display: flex;
 flex-direction: column;
+font-family: cursive;
+    font-style: oblique;
+    font-weight: bold;
 }
 
 .generation_realm {
