--- a/src/components/Generation/Generation.css
+++ b/src/components/Generation/Generation.css
@@ -5,13 +5,12 @@
   justify-content: center;
   align-items: stretch;
   border-radius: 5px;
-  margin: 5px;
 }
 
 .realm{
   flex:1;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
 }
 
 .generation_number{
@@ -57,6 +56,15 @@ font-family: cursive;
   justify-content: center;
   align-items: stretch;
 }
+
+
+.thread_realm{
+  position: relative;
+  background-color: green;
+  height: 100%;
+  width: 100%;
+}
+
 
 .members_cell{
   display: flex;
