--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -6,11 +6,17 @@
     left: 0px;
     top: 0px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-direction: row;
 }
 
 .button{
     width: 100px;
     background: rgb(255,255,0);
+    stroke: green;
+}
+
+.buttonGroup{
+    display: flex;
+    flex-direction: row;
 }
