--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -1,5 +1,4 @@
 .panel{
-    background: rgba(255,0,0,0.4);
     width: 100%;
     height: 100px;
     position: fixed;
@@ -8,15 +7,45 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    z-index: 200;
 }
 
 .button{
     width: 100px;
-    background: rgb(255,255,0);
-    stroke: green;
+    stroke: rgba(120,120,120, 0.5);
+    
+}
+
+.button:hover{
+    background: rgba(220,220,220, 0.5);
+    border-radius: 20px;
 }
 
 .buttonGroup{
     display: flex;
     flex-direction: row;
+}
+
+.icon{
+    position: absolute;
+    right: 0;
+    top: 0;
+    stroke: rgba(120,120,120, 0.5);
+}
+
+.input{
+    display: flex;
+}
+
+.inputField{
+    max-height: 100px;
+    max-width: 100px;
+    flex: 1;
+    font-size: 80px;
+}
+
+.inputField:focus{
+    max-height: 1000px;
+    max-width: 1000px;
+    flex: 1;
 }
